GearsetPOC/force-app/main/default/objects/Eurostar_To_Amex_Trailer_Response__c/Eurostar_To_Amex_Trailer_Response__c.object-meta.xml
<CustomObject>
    <label>Eurostar To Amex Trailer Response</label>
    <nameField>
        <displayFormat>ETATR-{0000000000}</displayFormat>
        <label>Eurostar To Amex Trailer Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Eurostar To Amex Trailer Response</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>