GearsetPOC/force-app/main/default/objects/Eurostar_To_Amex_Trailer_Response__c/fields/Enrollment_Footer_ID__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Footer_ID__c</fullName>
    <label>Enrollment  Footer ID</label>
    <length>1</length>
    <type>Text</type>
</CustomField>