GearsetPOC/force-app/main/default/objects/Eurostar_To_Amex_Trailer_Response__c/fields/Record_Read__c.field-meta.xml
<CustomField>
    <fullName>Record_Read__c</fullName>
    <label>Record Read</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>