GearsetPOC/force-app/main/default/objects/Eurostar_To_Amex_Trailer_Response__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <length>3</length>
    <type>Text</type>
</CustomField>